--- a/app/src/main/res/layout/fragment_movies_details.xml
+++ b/app/src/main/res/layout/fragment_movies_details.xml
@@ -66,7 +66,7 @@
             app:layout_constraintTop_toBottomOf="@id/iv_aboutMovie" />
 
 
-        <androidx.appcompat.widget.AppCompatTextView
+        `<androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tvReleaseDateDetails"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
