--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -14,6 +14,13 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent="0.05" />
 
+    <androidx.constraintlayout.widget.Guideline
+        android:id="@+id/horizontalGuideline"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.67" />
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/endGuideline"
@@ -67,31 +74,31 @@
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginHorizontal="40dp"
+        android:background="@drawable/registerbutton"
         android:text="@string/log_in_with_tmdb"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toTopOf="@id/btn_skip_button"
         app:layout_constraintDimensionRatio="8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/et_password" />
+        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
+        app:layout_constraintStart_toStartOf="@+id/startGuideline"
+        app:layout_constraintTop_toTopOf="@+id/horizontalGuideline" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_skip_button"
         style="?android:attr/borderlessButtonStyle"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="50dp"
-        android:layout_marginEnd="30dp"
+        android:layout_marginHorizontal="40dp"
+        android:background="@drawable/loginbutton"
         android:backgroundTint="#242A32"
         android:text="@string/login_in_with_firebase"
-        android:textColor="@color/white"
+        android:textColor="@color/green"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintDimensionRatio="8"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/btn_login" />
+        app:layout_constraintEnd_toStartOf="@+id/endGuideline"
+        app:layout_constraintStart_toStartOf="@+id/startGuideline"
+        app:layout_constraintTop_toBottomOf="@+id/btn_login" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
