--- a/app/src/main/res/layout/single_movie_layout.xml
+++ b/app/src/main/res/layout/single_movie_layout.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:background="#242A32">
+    android:padding="20dp"
+    tools:background="#59242A32">
 
 
     <androidx.constraintlayout.widget.Guideline
@@ -19,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.04" />
+        app:layout_constraintGuide_percent="0.0" />
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/tvGuideline"
@@ -34,6 +35,7 @@
         android:layout_width="140dp"
         android:layout_height="200dp"
         android:layout_margin="20dp"
+        android:background="@drawable/loginbutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/rightGuideline"
         app:layout_constraintStart_toStartOf="@+id/leftGuideline"
