--- a/app/src/main/res/layout/single_movie_layout.xml
+++ b/app/src/main/res/layout/single_movie_layout.xml
@@ -67,6 +67,7 @@
         tools:text="Die hard" />
 
     <androidx.appcompat.widget.AppCompatTextView
+        android:layout_marginTop="20dp"
         android:id="@+id/tvRating"
         android:layout_width="0dp"
         android:layout_height="0dp"
