--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,6 +6,11 @@
     android:layout_height="match_parent"
     android:background="#242A32">
 
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/splashScreen"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/startGuideline"
